# bevy_xpbd_3d_parenting

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  global.rs  global_versus_local.rs  rotating.rs
src/: lib.rs
tests/: basic.proptest-regressions  basic.rs  global.proptest-regressions  global.rs  local.rs  utils.rs
