[package]
name = "bevy_xpbd3d_parenting"
description = "Allows children of a `bevy_xpbd_3d` `RigidBody` to exert forces on their parents"
version = "0.1.0"
edition = "2021"
authors = ["actuallyhappening <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/bevy_xpbd3d_parenting"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.bevy]
version = "0.12"
# default-features = false
# features = ["bevy_render"]

[dependencies.bevy_xpbd_3d]
git = "https://github.com/Jondolf/bevy_xpbd.git"
default-features = false
features = ["3d", "f32", "debug-plugin", "parallel"]

[[example]]
name = "rotating"
required-features = ["bevy_xpbd_3d/async-collider"]

[dev-dependencies]
test-log = { version = "0.2.14", features = ["tracing-subscriber", "trace"] }
