[package]
name = "bevy_xpbd_3d_parenting"
description = "Allows children of a `bevy_xpbd_3d` `RigidBody` to exert forces on their parents"
version = "0.2.2"
edition = "2021"
authors = ["Caleb Yates <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/bevy_xpbd_3d_parenting"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "/examples"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = []

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.bevy]
version = "0.13"
default-features = false

[dependencies.bevy_xpbd_3d]
version = "0.4.2"
default-features = false
features = ["3d", "f32", "debug-plugin", "parallel"]


[dev-dependencies]
proptest = "1.4.0"

[dev-dependencies.bevy_xpbd_3d]
version = "0.4.2"
default-features = false
features = [
	"3d",
	"f32",
	"parry-f32",
	"debug-plugin",
	"parallel",
	"default-collider",
]

[dev-dependencies.bevy]
version = "0.13"

[[example]]
name = "rotating"
required-features = ["bevy_xpbd_3d/async-collider"]

[[example]]
name = "global_versus_local"
required-features = ["bevy_xpbd_3d/async-collider"]

[[example]]
name = "global"